<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mintcreme"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter_room"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true"
                android:imeOptions="actionDone"/>

            <Button
                android:id="@+id/buttonCheck"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:onClick="checkRoom"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>

    <requestFocus />

    <RelativeLayout
        android:id="@+id/contextLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="25dip">

            <TableRow
                android:id="@+id/tableRowRe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

            </TableRow>

            <TableRow
                android:id="@+id/tableRowRoomId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:id="@+id/textViewRoomId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/room"
                    android:textAlignment="gravity"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewRoomIdValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:id="@+id/textViewLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/lightlevel"
                    android:textAlignment="gravity"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewLightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:id="@+id/textViewTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/temp"
                    android:textAlignment="gravity"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewTempValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowHum"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:id="@+id/textViewNoise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/hum"
                    android:textAlignment="gravity"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewHumValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRowRoom"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:id="@+id/textViewRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/room"
                    android:textAlignment="gravity"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewRoomValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp" />


            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/tableLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/ic_bulb_on" />

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="14dp"
                android:onClick="switchLight"
                android:text="@string/lightonoff" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="14dp"
                android:onClick="switchRinger"
                android:text="@string/ringonoff" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>